# cal-provider

./: README.md  pyproject.toml
docs/plans/: 2026-02-25-admin-ui-and-readme-design.md  2026-02-25-admin-ui-implementation.md
src/cal_provider/: __init__.py  exceptions.py  models.py  provider.py  registry.py  utils.py
src/cal_provider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cal_provider/admin/: __init__.py  app.py
src/cal_provider/admin/static/: style.css
src/cal_provider/admin/templates/: base.html  config.html  dashboard.html  setup.html
src/cal_provider/mcp/: __init__.py  config.py  server.py
src/cal_provider/providers/: __init__.py  caldav_provider.py  google.py
tests/: conftest.py  test_admin.py  test_caldav_provider.py  test_exceptions.py  test_google_provider.py  test_mcp_server.py  test_models.py  test_registry.py  test_utils.py
